// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-jsxui 1. babel-plugin-jsxui: 1. babel-plugin-jsxui 1`] = `
"
import { Overrides, Text } from '@jsxui/core'

function App() {
  return (
    <Overrides
      value={[
        <Text color=\\"tomato\\" variants={{ hover: { color: 'papayawhip' } }} />,
      ]}
    >
      <Text>Hello World</Text>
    </Overrides>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { Overrides, Text } from '@jsxui/core';

function App() {
  return <Overrides value={[[Text, {
    color: \\"tomato\\",
    variants: {
      hover: {
        color: 'papayawhip'
      }
    }
  }]]}>
      <Text>Hello World</Text>
    </Overrides>;
}
"
`;

exports[`babel-plugin-jsxui 2. babel-plugin-jsxui: 2. babel-plugin-jsxui 1`] = `
"
import { Overrides, Text } from '@jsxui/core'

const overrides = [
  <Text color=\\"tomato\\" variants={{ hover: { color: 'papayawhip' } }} />,
]

function App() {
  return (
    <Overrides value={overrides}>
      <Text>Hello World</Text>
    </Overrides>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { Overrides, Text } from '@jsxui/core';
const overrides = [[Text, {
  color: \\"tomato\\",
  variants: {
    hover: {
      color: 'papayawhip'
    }
  }
}]];

function App() {
  return <Overrides value={overrides}>
      <Text>Hello World</Text>
    </Overrides>;
}
"
`;
